--- a/test/Makefile
+++ b/test/Makefile
@@ -4,16 +4,18 @@ vpath %.h ..
 vpath %.h lib
 
 P= runtests
-OBJECTS= zinm.o tests.o libunittest.so
 
 CC= gcc
+SOURCES= runtests.c
+IMPLICIT_SOURCES= zinm.c
+OBJECTS= libunittest.so
 INCLUDES= -I.. -Ilib
 COVERAGE= -fprofile-arcs -ftest-coverage
 CFLAGS= -std=gnu99 -g -Wall -O0 $(INCLUDES) $(COVERAGE)
 LDLIBS= -L`pwd` -Wl,-rpath=`pwd` -lm -lunittest
 
-$(P): $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) $(LDLIBS) -o $@
+$(P): $(OBJECTS) $(SOURCES) $(IMPLICIT_SOURCES)
+	$(CC) $(CFLAGS) $(SOURCES) $(OBJECTS) $(LDLIBS) -o $@
 
 clean:
 	rm -f $(P) $(OBJECTS) *.gcda *.gcno *.gcov gmon.out .inspect.gdb
